# ainalyst

./: .gitignore  README.md  asx_scraper.py  ipo_watchlist.yaml  pyproject.toml  run_analysis.sh
ainalyst/: __init__.py  acquisition.py  cli.py  config.py  directory.py  fundamentals.py  ipo.py  report.py  sector.py
ainalyst/valuation/: __init__.py  assumptions.py  bridge.py  comps.py  dcf.py
data/: custom_assumptions.json
examples/: run_analysis.py
tests/: test_bridge.py  test_comps.py  test_dcf.py  test_directory.py  test_fundamentals.py  test_ipo.py  test_sector.py
